alterações diagrama de sequencia

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee              http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
     <servlet>
-        <servlet-name>ControleCliente</servlet-name>
-        <servlet-class>br.icarwash.control.ControleCliente</servlet-class>
+        <servlet-name>ControleCommand</servlet-name>
+        <servlet-class>br.icarwash.control.ControleCommand</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>ControleCliente</servlet-name>
+        <servlet-name>ControleCommand</servlet-name>
         <url-pattern>/Controle</url-pattern>
     </servlet-mapping>
     <session-config>
