--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-io-1.3.2.jar=..\\..\\Downloads\\commons-io-1.3.2.jar
+file.reference.mockito-all-1.9.5.jar=..\\..\\Desktop\\Mockito\\mockito-all-1.9.5.jar
 file.reference.mysql-connector-java-5.1.40-bin.jar=../../../../Desktop/mysql-connector-java-5.1.40/mysql-connector-java-5.1.40/mysql-connector-java-5.1.40-bin.jar
 includes=**
 j2ee.compile.on.save=true
@@ -50,7 +52,10 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.mockito-all-1.9.5.jar}:\
+    ${libs.junit_4.classpath}:\
+    ${file.reference.commons-io-1.3.2.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
