--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,9 @@
-deploy.ant.properties.file=C:\\Users\\rezen\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
-file.reference.mysql-connector-java-5.1.40-bin.jar=C:\\Users\\rezen\\Desktop\\mysql-connector-java-5.1.40\\mysql-connector-java-5.1.40\\mysql-connector-java-5.1.40-bin.jar
+deploy.ant.properties.file=C:\\Users\\David\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+file.reference.commons-io-1.3.2.jar=C:\\commons-io-1.3.2.jar
+file.reference.mockito-all-1.9.5.jar=C:\\mockito-all-1.9.5.jar
+file.reference.mysql-connector-java-5.1.40-bin.jar=C:\\mysql-connector-java-5.1.40.jar
 j2ee.server.domain=C:/Users/rezen/AppData/Roaming/NetBeans/8.2/apache-tomcat-8.0.27.0_base
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.27
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.27:base=apache-tomcat-8.0.27.0_base
 selected.browser=Chrome
-user.properties.file=C:\\Users\\rezen\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\David\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
