--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,92 +1,83 @@
-annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=true
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-build.classes.dir=${build.web.dir}/WEB-INF/classes
+#Thu Sep 07 13:31:51 BRT 2017
+javadoc.splitindex=true
+lib.dir=${web.docbase.dir}/WEB-INF/lib
 build.classes.excludes=**/*.java,**/*.form
-build.dir=build
-build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-build.web.dir=${build.dir}/web
-build.web.excludes=${build.classes.excludes}
-client.urlPart=
-compile.jsps=false
-conf.dir=${source.root}/conf
-debug.classpath=${build.classes.dir}:${javac.classpath}
-debug.test.classpath=\
-    ${run.test.classpath}
-display.browser=true
-# Arquivos a serem exclu\u00eddos do war de distribui\u00e7\u00e3o
-dist.archive.excludes=
-dist.dir=dist
-dist.ear.war=${dist.dir}/${war.ear.name}
-dist.javadoc.dir=${dist.dir}/javadoc
-dist.war=${dist.dir}/${war.name}
-endorsed.classpath=\
-    ${libs.javaee-endorsed-api-7.0.classpath}
-excludes=
-file.reference.commons-io-1.3.2.jar=..\\..\\Downloads\\commons-io-1.3.2.jar
-file.reference.mockito-all-1.9.5.jar=..\\..\\Desktop\\Mockito\\mockito-all-1.9.5.jar
-file.reference.mysql-connector-java-5.1.40-bin.jar=../../../../Desktop/mysql-connector-java-5.1.40/mysql-connector-java-5.1.40/mysql-connector-java-5.1.40-bin.jar
-includes=**
-j2ee.compile.on.save=true
-j2ee.copy.static.files.on.save=true
-j2ee.deploy.on.save=true
+javadoc.author=false
 j2ee.platform=1.7-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
-j2ee.server.type=Tomcat
-jar.compress=false
-javac.classpath=\
-    ${libs.jstl.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.40-bin.jar}
-# Space-separated list of extra javac options
-javac.compilerargs=
-javac.debug=true
-javac.deprecation=false
-javac.processorpath=\
-    ${javac.classpath}
-javac.source=1.8
+dist.war=${dist.dir}/${war.name}
 javac.target=1.8
+build.generated.dir=${build.dir}/generated
+resource.dir=setup
+build.web.excludes=${build.classes.excludes}
+war.ear.name=${war.name}
+j2ee.compile.on.save=true
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar\:${j2ee.server.home}/lib/catalina-ant.jar\:${j2ee.server.home}/lib/catalina-ha.jar\:${j2ee.server.home}/lib/catalina-storeconfig.jar\:${j2ee.server.home}/lib/catalina-tribes.jar\:${j2ee.server.home}/lib/catalina.jar\:${j2ee.server.home}/lib/ecj-4.4.2.jar\:${j2ee.server.home}/lib/el-api.jar\:${j2ee.server.home}/lib/jasper-el.jar\:${j2ee.server.home}/lib/jasper.jar\:${j2ee.server.home}/lib/jsp-api.jar\:${j2ee.server.home}/lib/servlet-api.jar\:${j2ee.server.home}/lib/tomcat-api.jar\:${j2ee.server.home}/lib/tomcat-coyote.jar\:${j2ee.server.home}/lib/tomcat-dbcp.jar\:${j2ee.server.home}/lib/tomcat-i18n-es.jar\:${j2ee.server.home}/lib/tomcat-i18n-fr.jar\:${j2ee.server.home}/lib/tomcat-i18n-ja.jar\:${j2ee.server.home}/lib/tomcat-jdbc.jar\:${j2ee.server.home}/lib/tomcat-jni.jar\:${j2ee.server.home}/lib/tomcat-util-scan.jar\:${j2ee.server.home}/lib/tomcat-util.jar\:${j2ee.server.home}/lib/tomcat-websocket.jar\:${j2ee.server.home}/lib/websocket-api.jar
+debug.test.classpath=${run.test.classpath}
+build.dir=build
+javac.deprecation=false
+persistence.xml.dir=${conf.dir}
+j2ee.copy.static.files.on.save=true
+test.src.dir=test
+junit.selected.version=4
+includes=**
+file.reference.mysql-connector-java-5.1.40-bin.jar=../../../../Desktop/mysql-connector-java-5.1.40/mysql-connector-java-5.1.40/mysql-connector-java-5.1.40-bin.jar
+jar.compress=false
+annotation.processing.processors.list=
+javadoc.version=false
+build.classes.dir=${build.web.dir}/WEB-INF/classes
+dist.dir=dist
+file.reference.mockito-all-1.9.5.jar=..\\..\\Desktop\\Mockito\\mockito-all-1.9.5.jar
+javac.source=1.8
+javac.debug=true
+javac.test.processorpath=${javac.test.classpath}
+dist.archive.excludes=
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+build.generated.sources.dir=${build.dir}/generated-sources
+javadoc.notree=false
+runmain.jvmargs=
+source.root=src
+platform.active=default_platform
+javadoc.preview=true
+j2ee.deploy.on.save=true
+annotation.processing.enabled=true
+dist.javadoc.dir=${dist.dir}/javadoc
+war.content.additional=
+client.urlPart=
+javadoc.additionalparam=
+javac.classpath=${libs.jstl.classpath}\:${file.reference.mysql-connector-java-5.1.40-bin.jar}
+javadoc.noindex=false
+webinf.dir=web/WEB-INF
+annotation.processing.enabled.in.editor=true
+no.dependencies=false
+javadoc.private=false
+javadoc.encoding=${source.encoding}
+build.test.classes.dir=${build.dir}/test/classes
+web.docbase.dir=web
+javac.compilerargs=
+source.encoding=UTF-8
+dist.ear.war=${dist.dir}/${war.ear.name}
+j2ee.server.type=Tomcat
+conf.dir=${source.root}/conf
+annotation.processing.run.all.processors=true
+compile.jsps=false
+excludes=
+javac.processorpath=${javac.classpath}
+build.test.results.dir=${build.dir}/test/results
+display.browser=true
+endorsed.classpath=${libs.javaee-endorsed-api-7.0.classpath}
+javadoc.use=true
+build.web.dir=${build.dir}/web
+javadoc.nonavbar=false
+war.name=ICarWash.war
+file.reference.commons-io-1.3.2.jar=..\\..\\Downloads\\commons-io-1.3.2.jar
+javadoc.windowtitle=
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${file.reference.mockito-all-1.9.5.jar}:\
     ${libs.junit_4.classpath}:\
-    ${file.reference.commons-io-1.3.2.jar}
-javac.test.processorpath=\
-    ${javac.test.classpath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=${source.encoding}
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
-javadoc.preview=true
-javadoc.private=false
-javadoc.splitindex=true
-javadoc.use=true
-javadoc.version=false
-javadoc.windowtitle=
-lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
-persistence.xml.dir=${conf.dir}
-platform.active=default_platform
-resource.dir=setup
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-# Space-separated list of JVM arguments used when running a class with a main method or a unit test
-# (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value):
-runmain.jvmargs=
-source.encoding=UTF-8
-source.root=src
+    ${file.reference.commons-io-1.3.2.jar}:\
+    ${libs.hamcrest.classpath}
 src.dir=${source.root}/java
-test.src.dir=test
-war.content.additional=
-war.ear.name=${war.name}
-war.name=ICarWash.war
-web.docbase.dir=web
-webinf.dir=web/WEB-INF
+annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+debug.classpath=${build.classes.dir}\:${javac.classpath}
