arquivos .jar necessarios
commons, mysql, mockito

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,4 @@
+file.reference.mysql-connector-java-5.1.40.jar=mysql-connector-java-5.1.40.jar
 #Thu Sep 07 13:31:51 BRT 2017
 javadoc.splitindex=true
 lib.dir=${web.docbase.dir}/WEB-INF/lib
@@ -20,13 +21,12 @@ j2ee.copy.static.files.on.save=true
 test.src.dir=test
 junit.selected.version=4
 includes=**
-file.reference.mysql-connector-java-5.1.40-bin.jar=../../../../Desktop/mysql-connector-java-5.1.40/mysql-connector-java-5.1.40/mysql-connector-java-5.1.40-bin.jar
 jar.compress=false
 annotation.processing.processors.list=
 javadoc.version=false
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 dist.dir=dist
-file.reference.mockito-all-1.9.5.jar=..\\..\\Desktop\\Mockito\\mockito-all-1.9.5.jar
+file.reference.mockito-all-1.9.5.jar=mockito-all-1.9.5.jar
 javac.source=1.8
 javac.debug=true
 javac.test.processorpath=${javac.test.classpath}
@@ -44,7 +44,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 war.content.additional=
 client.urlPart=
 javadoc.additionalparam=
-javac.classpath=${libs.jstl.classpath}\:${file.reference.mysql-connector-java-5.1.40-bin.jar}
+javac.classpath=\
+    ${libs.jstl.classpath}:\
+    ${file.reference.commons-io-1.3.2.jar}:\
+    ${file.reference.mockito-all-1.9.5.jar}:\
+    ${file.reference.mysql-connector-java-5.1.40.jar}
 javadoc.noindex=false
 webinf.dir=web/WEB-INF
 annotation.processing.enabled.in.editor=true
@@ -69,7 +73,7 @@ javadoc.use=true
 build.web.dir=${build.dir}/web
 javadoc.nonavbar=false
 war.name=ICarWash.war
-file.reference.commons-io-1.3.2.jar=..\\..\\Downloads\\commons-io-1.3.2.jar
+file.reference.commons-io-1.3.2.jar=commons-io-1.3.2.jar
 javadoc.windowtitle=
 javac.test.classpath=\
     ${javac.classpath}:\
