--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,4 @@
-file.reference.EmailVerification.jar=lib/webservice_clients/EmailVerification.jar
+file.reference.java-json.jar=java-json.jar
 file.reference.mysql-connector-java-5.1.40.jar=mysql-connector-java-5.1.40.jar
 #Thu Sep 07 13:31:51 BRT 2017
 javadoc.splitindex=true
@@ -50,7 +50,7 @@ javac.classpath=\
     ${file.reference.commons-io-1.3.2.jar}:\
     ${file.reference.mockito-all-1.9.5.jar}:\
     ${file.reference.mysql-connector-java-5.1.40.jar}:\
-    ${file.reference.EmailVerification.jar}
+    ${file.reference.java-json.jar}
 javadoc.noindex=false
 webinf.dir=web/WEB-INF
 annotation.processing.enabled.in.editor=true
