--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -52,7 +52,8 @@ javac.classpath=\
     ${file.reference.mockito-all-1.9.5.jar}:\
     ${file.reference.mysql-connector-java-5.1.40.jar}:\
     ${file.reference.java-json.jar}:\
-    ${file.reference.gson-2.8.2.jar}
+    ${file.reference.gson-2.8.2.jar}:\
+    ${libs.junit_4.classpath}
 javadoc.noindex=false
 webinf.dir=web/WEB-INF
 annotation.processing.enabled.in.editor=true
