--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,9 @@
+file.reference.commons-email-1.4.jar=commons-email-1.4.jar
 file.reference.gson-2.8.2.jar=gson-2.8.2.jar
 file.reference.java-json.jar=java-json.jar
+file.reference.mail.jar=mail.jar
 file.reference.mysql-connector-java-5.1.40.jar=mysql-connector-java-5.1.40.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 #Thu Sep 07 13:31:51 BRT 2017
 javadoc.splitindex=true
 lib.dir=${web.docbase.dir}/WEB-INF/lib
@@ -14,7 +17,6 @@ resource.dir=setup
 build.web.excludes=${build.classes.excludes}
 war.ear.name=${war.name}
 j2ee.compile.on.save=true
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar\:${j2ee.server.home}/lib/catalina-ant.jar\:${j2ee.server.home}/lib/catalina-ha.jar\:${j2ee.server.home}/lib/catalina-storeconfig.jar\:${j2ee.server.home}/lib/catalina-tribes.jar\:${j2ee.server.home}/lib/catalina.jar\:${j2ee.server.home}/lib/ecj-4.4.2.jar\:${j2ee.server.home}/lib/el-api.jar\:${j2ee.server.home}/lib/jasper-el.jar\:${j2ee.server.home}/lib/jasper.jar\:${j2ee.server.home}/lib/jsp-api.jar\:${j2ee.server.home}/lib/servlet-api.jar\:${j2ee.server.home}/lib/tomcat-api.jar\:${j2ee.server.home}/lib/tomcat-coyote.jar\:${j2ee.server.home}/lib/tomcat-dbcp.jar\:${j2ee.server.home}/lib/tomcat-i18n-es.jar\:${j2ee.server.home}/lib/tomcat-i18n-fr.jar\:${j2ee.server.home}/lib/tomcat-i18n-ja.jar\:${j2ee.server.home}/lib/tomcat-jdbc.jar\:${j2ee.server.home}/lib/tomcat-jni.jar\:${j2ee.server.home}/lib/tomcat-util-scan.jar\:${j2ee.server.home}/lib/tomcat-util.jar\:${j2ee.server.home}/lib/tomcat-websocket.jar\:${j2ee.server.home}/lib/websocket-api.jar
 debug.test.classpath=${run.test.classpath}
 build.dir=build
 javac.deprecation=false
@@ -33,7 +35,9 @@ javac.source=1.8
 javac.debug=true
 javac.test.processorpath=${javac.test.classpath}
 dist.archive.excludes=
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.notree=false
 runmain.jvmargs=
@@ -53,11 +57,12 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.40.jar}:\
     ${file.reference.java-json.jar}:\
     ${file.reference.gson-2.8.2.jar}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${file.reference.commons-email-1.4.jar}:\
+    ${file.reference.mail.jar}
 javadoc.noindex=false
 webinf.dir=web/WEB-INF
 annotation.processing.enabled.in.editor=true
-no.dependencies=false
 javadoc.private=false
 javadoc.encoding=${source.encoding}
 build.test.classes.dir=${build.dir}/test/classes
@@ -70,10 +75,12 @@ conf.dir=${source.root}/conf
 annotation.processing.run.all.processors=true
 compile.jsps=false
 excludes=
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 build.test.results.dir=${build.dir}/test/results
 display.browser=true
-endorsed.classpath=${libs.javaee-endorsed-api-7.0.classpath}
+endorsed.classpath=\
+    ${libs.javaee-endorsed-api-7.0.classpath}
 javadoc.use=true
 build.web.dir=${build.dir}/web
 javadoc.nonavbar=false
