--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,8 +1,14 @@
 file.reference.commons-email-1.4.jar=commons-email-1.4.jar
+file.reference.commons-lang-2.4.jar=commons-lang-2.4.jar
+file.reference.commons-lang3-3.7.jar=commons-lang3-3.7.jar
 file.reference.gson-2.8.2.jar=gson-2.8.2.jar
+file.reference.itext-2.0.8.jar=itext-2.0.8.jar
 file.reference.java-json.jar=java-json.jar
+file.reference.JRimum-Bopepo-SNAPSHOT-20110415-bin.jar=JRimum-Bopepo-SNAPSHOT-20110415-bin.jar
+file.reference.log4j-1.2.15.jar=log4j-1.2.15.jar
 file.reference.mail.jar=mail.jar
 file.reference.mysql-connector-java-5.1.40.jar=mysql-connector-java-5.1.40.jar
+file.reference.pagseguro-api-2.2.0.jar=pagseguro-api-2.2.0.jar
 j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 #Thu Sep 07 13:31:51 BRT 2017
 javadoc.splitindex=true
@@ -59,7 +65,13 @@ javac.classpath=\
     ${file.reference.gson-2.8.2.jar}:\
     ${libs.junit_4.classpath}:\
     ${file.reference.commons-email-1.4.jar}:\
-    ${file.reference.mail.jar}
+    ${file.reference.mail.jar}:\
+    ${file.reference.commons-lang3-3.7.jar}:\
+    ${file.reference.pagseguro-api-2.2.0.jar}:\
+    ${file.reference.JRimum-Bopepo-SNAPSHOT-20110415-bin.jar}:\
+    ${file.reference.itext-2.0.8.jar}:\
+    ${file.reference.log4j-1.2.15.jar}:\
+    ${file.reference.commons-lang-2.4.jar}
 javadoc.noindex=false
 webinf.dir=web/WEB-INF
 annotation.processing.enabled.in.editor=true
